# claw_machine

./: .editorconfig  Cargo.toml  README.md
assets/mesh/: claw.glb  claw_machine.glb  claw_machine1.glb
assets/prefab/: scene.ron
config/: bindings.ron  display.ron
src/: component_creators.rs  gameplay.rs  main.rs
src/entities/: camera.rs  claw.rs  claw_holder.rs  claw_machine.rs  ground.rs  light.rs  mod.rs  player.rs  standard_entity.rs  toy_machine.rs
src/systems/: catch_the_toy_system.rs  mod.rs  wasd_movement_system.rs
